# capstone

./: .flake8  README.md  main.py  mark1.ino  mark2.ino  mark3.ino  mock_up.py  notes.txt  pyproject.toml  setup.sh
