[project]
name = "capstone"
version = "0.1.0"
description = ""
package-mode = false
authors = [
    {name = "kgary432",email = "kgary7373@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy (>=2.3.4,<3.0.0)",
    "sounddevice (>=0.5.3,<0.6.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "pyserial (>=3.5,<4.0)",
    "black (>=26.1.0,<27.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "isort (>=7.0.0,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
